# alex

./: .env.backup  .env.example  .gitignore  1_permissions.md  2_sagemaker.md  CLAUDE.md  README.md  SUMMARY.md  actionplan.md  backup_step_8.md  check_db.py  claude_code_performance_incident.md  ed_test_step2.md  ed_test_step6.md  gameplan.md  test_payload.json
backend/: README.md  check_charter_data.py  check_db.py  check_job_details.py  deploy_all_lambdas.py  package_docker.py  pyproject.toml  test_db_simple.py  test_full.py  test_langfuse.py  test_multi_simple.py  test_multiple_accounts.py  test_scale.py  test_simple.py  test_tagger_workflow.py  vectorize_me.json  watch_agents.py
backend/api/: lambda_handler.py  main.py  package_docker.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_charter.py  test_full.py  test_large_local.py  test_simple.py  test_simple_remote.py
backend/database/: PART5_COMPLETE.md  README.md  aurora_config.json  pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  test_db.py  test_new_schema.py  test_phase1_jobs.py  test_phase1_merging.py  verify_database.py
backend/database/migrations/: 001_schema.sql
backend/database/src/: __init__.py  client.py  (+2 more)
backend/ingest/: cleanup_s3vectors.py  ingest.py  ingest_s3vectors.py  package.py  search_s3vectors.py  test_api.py  test_auth.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/lambda/: cleanup_api.py  pyproject.toml  search_api.py  test_api.py
backend/planner/: add_unknown_instrument.py  agent.py  backup_lambda_handler.py  check_instruments.py  check_job_results.py  check_jobs.py  check_test_data.py  lambda_handler.py  market.py  observability.py  package_docker.py  prices.py  pyproject.toml  run_full_test.py  templates.py  test_autonomy.py  test_full.py  test_hardcoded.py  test_integration.py  test_local.py  test_market.py  test_minimal_tool.py  test_simple.py  test_sqs_direct.py  test_tagger_workflow.py
backend/reporter/: agent.py  judge.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_reporter.py  test_simple.py
backend/researcher/: .dockerignore  Dockerfile  context.py  debug_mcp_container.py  deploy.py  deploy.sh  mcp_servers.py  pyproject.toml  run_local.sh  server.py  test_bedrock.py  test_local.py  test_mcp_debug.py  test_research.py  test_research_bedrock.py  test_topic.py  tools.py
backend/retirement/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_retirement.py  test_simple.py
backend/scheduler/: lambda_function.py  pyproject.toml
backend/tagger/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  requirements_docker.txt  templates.py  test_alignment.py  test_full.py  test_lambda.py  test_local.py  test_simple.py  test_tagger_simple.py  test_tagger_standalone.py  track_tagger.py  try_tagger.py
(+123 files in other folders)
